fix: slider pin-spacer gap, manifesto previews sticking, mobile scroll lag, footer alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--base-300);
   font-family: "Satoshi", sans-serif;
-  overflow-x: hidden;
+  overflow-x: clip;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -39,6 +39,7 @@ body {
 html.lenis,
 html.lenis body {
   height: auto;
+  overflow-x: clip;
 }
 
 .lenis.lenis-smooth {
@@ -202,29 +203,7 @@ img {
   transform: translateZ(0);
 }
 
-.progress-bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 3.5px;
-  background-color: var(--base-200);
-  transform-origin: left;
-  transform: scaleX(0);
-  will-change: transform;
-  overflow: hidden;
-  z-index: 8;
-}
 
-.progress-bar .progress {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: var(--base-100);
-  transform-origin: left;
-  transform: scaleX(0);
-  will-change: transform;
-}
 
 .scroll-down {
   position: fixed;
@@ -288,12 +267,13 @@ img {
 
 .manifesto {
   --manifesto-preview-width: clamp(360px, 25vw, 460px);
-  --manifesto-spacer-height: 150vh;
+  --manifesto-spacer-height: 60vh;
   position: relative;
   width: 100%;
   font-family: "Satoshi", sans-serif;
   background: #000;
   color: #fff;
+  margin-top: -50vh;
 }
 
 .manifesto__previews {
@@ -333,7 +313,7 @@ img {
 
 .manifesto__slide {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 2em;
   overflow: visible;
@@ -342,16 +322,12 @@ img {
 }
 
 .manifesto__slide--1 {
-  margin-top: -210vh;
+  margin-top: 0;
 }
 
 .manifesto__slide--last {
-  height: 0;
-  min-height: 0;
-  padding: 0;
-}
-
-.manifesto__slide--last .manifesto__copy {
+  position: relative;
+  width: 100%;
   height: 100vh;
   padding: 2em;
 }
@@ -435,7 +411,7 @@ img {
   }
 
   .manifesto__spacer {
-    height: 130vh;
+    height: 60vh;
   }
 }
 
@@ -453,12 +429,13 @@ img {
   }
 
   .manifesto__spacer {
-    height: 120vh;
+    height: 50vh;
   }
 }
 
 .slider {
   position: relative;
+  top: 0;
   z-index: 1;
   width: 100%;
   height: 100svh;
